# oute-mind

./: .dockerignore  .env.production.example  .gitignore  AGENTS.md  DEPLOYMENT_GCP.md  README.md  SECURITY_BACKLOG.md  docker-compose.dev.yml  docker-compose.develop.yml  docker-compose.prd.yml  docker-compose.yml  initial-setup.sh  pyproject.toml
.github/workflows/: 1-pull-request.yml  5-security-scan.yml  6-dependency-check.yml  deploy-to-gcp.yml  deploy-to-vm-develop.yml  diagnose-production.yml  health-check.yml
app/: Dockerfile
backup_docs/: README.md
backup_docs/reference/: project_overview.md
configs/: Caddyfile  Caddyfile.dev  Caddyfile.prd  postgres-init.sql  prometheus.yml
docs/: DEPLOYMENT_GCP.md
docs/adr/: 001-gcp-arm64-vm.md  002-crewai-sequential-pipeline.md  003-gemini-como-llm.md  004-qdrant-para-rag.md
docs/api/: endpoints.md
docs/reference/: DEEPWIKI.md
reference/: DEEPWIKI.md  architecture.excalidraw.md  implementation_plan.md  project_overview.md
scripts/: gcp-setup.sh  generate-credentials.sh
src/estimator/: api.py  crew.py  dashboard.html  main.py
src/estimator/config/: agents.yaml  tasks.yaml
src/estimator/tools/: __init__.py  jina_reader_tool.py  mindsdb_tool.py  postgres_tool.py
