[project]
name = "estimator"
version = "0.1.0"
description = "software_project_estimator_with_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
    "minds-sdk",
    "qdrant-client",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
estimator = "estimator.main:run"
run_crew = "estimator.main:run"
train = "estimator.main:train"
replay = "estimator.main:replay"
test = "estimator.main:test"
run_with_trigger = "estimator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
