[project]
name = "estimator"
version = "0.1.0"
description = "software_project_estimator_with_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools,google-genai]==1.10.1",
    "minds-sdk",
    "qdrant-client",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
estimator = "estimator.main:run"
run_crew = "estimator.main:run"
train = "estimator.main:train"
replay = "estimator.main:replay"
test = "estimator.main:test"
run_with_trigger = "estimator.main:run_with_trigger"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "pip-licenses>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E402",  # module-level import not at top — intencional em api.py (dotenv antes do crew)
    "F841",  # local variable assigned but never used — será corrigido gradualmente
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disable_error_code = ["import-untyped", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
